--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "webpack-dev-server --mode development",
     "build": "webpack --mode production",
     "test": "jest --coverage",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "heroku-postbuild": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -19,8 +20,10 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.1.0",
     "bootstrap": "^4.2.1",
+    "express": "^4.16.4",
     "jest": "^24.1.0",
     "moxios": "^0.4.0",
+    "msg-notify": "^1.1.3",
     "prop-types": "^15.6.2",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
